--- a/bio.html
+++ b/bio.html
@@ -22,6 +22,11 @@
   </header>
 
   <main>
+    <section class="hero">
+      <div class="container">
+        <h2>About James</h2>
+      </div>
+    </section>
 
     <section class="content">
       <div class="container">
