--- a/bio.html
+++ b/bio.html
@@ -30,11 +30,11 @@
 
     <section class="content">
       <div class="container">
-        <p>James Dushane is a lifelong builder whose career has revolved around one constant: turning emerging technology into products people can’t wait to use. He wrote his first lines of code in school and, at 16, co-founded Digital Spy, growing it into the UK’s largest entertainment news site before its acquisition by Hachette Filipacchi, now Hearst. At Hearst, James led digital platform strategy, modernizing publishing for 100M+ million monthly users.</p>
+        <p>James Dushane is a lifelong builder whose career has revolved around one constant: turning emerging technology into products people can’t wait to use. He wrote his first lines of code in school and, at 16, co-founded Digital Spy, growing it into the UK’s largest entertainment news site before its acquisition by Hachette Filipacchi, now Hearst. At Hearst, James led digital platform strategy, modernizing publishing for 100M+ monthly users.</p>
         
         <p>Today, James is a product strategist in the Design & Digital Products practice at Accenture Song, where he helps global brands translate sharp insights and elegant design into breakthrough digital services that drive impact and value. Equally at home sketching an MVP in a whiteboarding session and shaping a multi-year growth roadmap with C-suite executives, he is known for marrying entrepreneurial scrappiness with enterprise-scale rigor.</p>
         
-        <p>Born in the UK, James lives in New York City, NY with his husband. He loves music from the 80s, exploring the city by bike, and playing with new tech.</p>
+        <p>Born in the UK, James lives in New York City with his husband. He loves music from the 80s, exploring the city by bike, and playing with new tech.</p>
       </div>
     </section>
   </main>
